--- a/settings.yaml
+++ b/settings.yaml
@@ -6,8 +6,8 @@ dj_library_directory: "E:\\" # director of your usb and program output
 tracks_folder: "pysync_dj_tracks" # Folder name for location of saved audio
 
 download_liked_songs: true # Should download users liked songs? (true/false)
-liked_songs_track_limit: 100  # How many of your liked songs to download (integer)
-liked_songs_date_limit: 10-10-23 # Date to download back to (DD-MM-YYYY)
+liked_songs_track_limit: null  # How many of your liked songs to download (integer)
+liked_songs_date_limit: 01-08-23 # Date to download back to (DD-MM-YYYY)
 
 playlists_to_download:
   Nfdnbs24: "2rBDG7m5QcjM3OjHyorkMZ"
