--- a/settings.yaml
+++ b/settings.yaml
@@ -2,17 +2,17 @@ spotify_client_id: "87a07cc2f67449dea1033ac2edef323f"
 spotify_client_secret: "ea63089c4a8c4e38862eacdaf2aefdfb"
 spotify_redirect_uri: "http://localhost:8888/callback"
 
-dj_library_directory: "E:\\" # director of your usb and program output
-tracks_folder: "pysync_dj_tracks" # Folder name for location of saved audio files
+dj_library_directory: "D:\\" # director of your usb and program output
+tracks_folder: "PySync Dj Tracks" # Folder name for location of saved audio files
 serato_subcrate_dir: "_Serato_\\Subcrates" # Location of your serato subcrates
-rekordbox_playlist_folder: "Rekordbox Playlist Import Files" # Folder name for location of saved rekordbox m3u files
+rekordbox_playlist_folder: "_Rekordbox Playlist Import Files_" # Folder name for location of saved rekordbox m3u files
 
 download_liked_songs: true # Should download users liked songs? (true/false)
-liked_songs_track_limit: null  # How many of your liked songs to download (integer)
+liked_songs_track_limit: 50  # How many of your liked songs to download (integer)
 liked_songs_date_limit: 01-05-23 # Date to download back to (DD-MM-YYYY)
 
 playlists_to_download:
   Nfdnbs24: "2rBDG7m5QcjM3OjHyorkMZ"
-  Jazz n Bass: "6Ch7BrfAM6cTiiBtzONxZR"
-  Chill DnB: "1sbpRux2JYEvosuikC01AY"
+  #Jazz n Bass: "6Ch7BrfAM6cTiiBtzONxZR"
+  #Chill DnB: "1sbpRux2JYEvosuikC01AY"
   Dnb24.1: "7suQlwliFponAvWaKjyBxC"
