Made windows executable

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,13 @@
 *$py.class
 *.cache
 
+PySyncDJ.spec
+
 .idea/
 id_to_video_map.json
 pysync_dj/__pycache__/
 pysync_dj/.cache
 venv/
+build/
 __pycache__/
 settings.yaml
