Add pyinstaller build and update requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,8 @@ requests~=2.31.0
 mutagen~=1.47.0
 PyYAML~=6.0.1
 customtkinter~=5.2.2
+future~=1.0.0
 spotipy~=2.23.0
 pytube~=15.0.0
 moviepy~=1.0.3
-ffmpeg-python~=0.2.0
-future~=1.0.0
-pytubefix>=6.5rc1
-pyinstaller~=6.9.0
+pytubefix~=8.3.0
