--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -7,12 +7,17 @@ jobs:
   pyinstaller-build:
     runs-on: macos-latest
     steps:
-      - name: Install Requirements.txt
-        run: 'pip install nicegui pywebview'
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - name: Create Executable
+        uses: sayyid5416/pyinstaller@v1
+        with:
       - name: Create Mac Executable
         uses: sayyid5416/pyinstaller@v1
         with:
           python_ver: '3.9'
           spec: 'PySyncDj.spec'
           requirements: 'requirements.txt'
-          upload_exe_with_name: 'PySync DJ'
+          upload_exe_with_name: 'PySync DJ Mac'
