--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -11,6 +11,22 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+
+      - name: Install gettext dependency
+        run: |
+          brew install gettext
+          brew link --force gettext
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+
+      - name: Install requirements
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Create Executable
         uses: sayyid5416/pyinstaller@v1
         with:
